# itsc-4681-project2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Implementation-Plan.md  MEMORY.md  NEXUS_Report.docx  NEXUS_Report_Reflection.docx  reflection.md  sequence-diagrams.md  state-diagram.md  system-spec.md
fixtures/rag_docs/langchain/: agents.md  tools.md  vectorstores.md
scripts/: generate_diagrams.py
src/nexus/: main.py
src/nexus/cli/: repl.py
src/nexus/config/: settings.py
src/nexus/core/: agent.py  error_handler.py
src/nexus/llm/: __init__.py  groq_provider.py  ollama_provider.py  provider.py
src/nexus/mcp/: client.py  server_registry.py
src/nexus/mcp/servers/: rag.py  rag_stdio_server.py
src/nexus/rag/: __init__.py  chunker.py  embeddings.py  fusion.py  service.py  store.py
tests/integration/: test_agentic_loop.py  test_llm_providers.py  test_phase3_mcp.py  test_phase3_runtime.py  test_phase4_rag.py
